Enhance conversation and message handling; add isLastMessageSender and state to Conversation model; implement WebSocketPayload for message operations; update side-bar and conversation components for improved message display and interaction